# VinlandVikings

./: .gitignore  CMakeLists.txt  CMakePresets.json  CPack.cmake  ExternalFetchContent.cmake  README.md  auxiliary.cmake  icon.rc  properties.rc  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Config/: CMakeLists.txt  config.proto
VinlandVikings_Lib/: CMakeLists.txt
VinlandVikings_Lib/src/vin/: camera.cpp  camera.h  configuration.cpp  configuration.h  coordinatesystem.cpp  coordinatesystem.h  deck.h  hexagonbatch.cpp  hexcanvas.cpp  hexcanvas.h  hexdimension.h  heximage.cpp  heximage.h  imguiextra.h  random.h  tilesgraphic.cpp  tilesgraphic.h  types.h  vinlandwindow.cpp  vinlandwindow.h  vinshader.cpp
VinlandVikings_Lib/src/vin/hex/: mapgenerator.cpp  mapgenerator.h  tile.h  tileboard.h  tilekey.h
VinlandVikings_Test/: CMakeLists.txt
VinlandVikings_Test/src/: coordinatesystemtest.cpp  main.cpp  print.h  vinlandvikings.cpp
src/: main.cpp
src/vin/: action.cpp  action.h  batchmanager.cpp  batchmanager.h  camera.cpp  camera.h  canvas.cpp  canvas.h  commandmanager.h  configuration.cpp  configuration.h  graphic.cpp  graphic.h  hex.h  hexagon.cpp  hexagon.h  hexagonbatch.cpp  hexagonbatch.h  hexcanvas.cpp  hexcanvas.h  hexdata.cpp  hexdata.h  hexdimension.h  heximage.cpp  heximage.h  hexsides.h  hexsideskey.cpp  hexsideskey.h  hextilemap.cpp  hextilemap.h  imguiextra.cpp  imguiextra.h  logger.cpp  logger.h  main.cpp  orientation.h  random.h  shader.cpp  shader.h  spritetile.cpp  (+12 more)
src/vin/hex/: hash.h  hex.h  hexagon.cpp  hexagon.h  hexsides.h  hexsideskey.h  hextilemap.cpp  hextilemap.h  mapgenerator.cpp  mapgenerator.h  shape.cpp  shape.h  tile.h  tileboard.cpp  tileboard.h  tilekey.h
